retrieveUnpackaged/objects/Candidate__c.object
<CustomObject>
    <description>Represents an applicant who might apply for one
or more positions</description>
    <fields>
        <fullName>Apex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalId>true</externalId>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <externalId>true</externalId>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <externalId>true</externalId>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Related_Skills__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related_Skills</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Position__c.Apex__c</field>
                <operation>equals</operation>
                <valueField>$Source.Apex__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Candidates</relationshipLabel>
        <relationshipName>Candidates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Street__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phone__c</field>
            <operation>equals</operation>
            <value>033-22724952</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Candidate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>